# opencv_seam

./: .gitignore  CMakeLists.txt  README.md
scripts/: build_x64.sh  compile.sh  cv_pano.py  run.sh
src/: seam_smooth.cpp  seam_smooth.hpp  utils.cpp  utils.hpp
test/: test.cpp
